client/src/App.css
@import url("https://fonts.googleapis.com/css?family=IBM+Plex+Sans:300,400,600");

* {
  font-family: "IBM Plex Sans", sans-serif;
  font-size: 18px;
  font-weight: 400;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 600;
  letter-spacing: 0.05em;
}

.font-light {
  font-weight: 300;
}

p {
  margin-bottom: 0.8rem;
}

.uppercase {
  text-transform: uppercase;
}

.App {
  background-color: #232733;
}

.App-header {
  position: relative;
  background-color: #282c34;
  background-image: url("./img/code-bg.jpg");
  background-size: cover;
  background-position: center center;
  background-repeat: no-repeat;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  justify-content: center;
}

.hero-text-wrapper {
  display: inline-block;
  background-color: #ffffff;
  color: #222222;
  padding: 50px;
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
}

.hero-text-wrapper.info {
  margin-top: 75px;
  padding: 35px 50px;
  max-width: 75%;
}

.hero-text-wrapper.info p:last-of-type {
  margin-bottom: 0;
}

.hero-text-wrapper h1 {
  font-size: 144px;
  line-height: 0.7;
}

.hero-text-wrapper h1 span {
  font-size: 96px;
  font-weight: 300;
}

.header-menu-items {
  position: fixed;
  top: 0;
  right: 0;
  color: #222222;
  list-style: none;
}

.header-menu-items > li {
  display: inline-block;
  padding: 20px 30px;
  background-color: #fff;
}

.header-menu-items li:first-of-type {
  border-right: 1px solid #dddddd;
}

.user-search-heading {
  display: inline-block;
  background-color: #a1c95e;
  color: #222222;
  padding: 10px 15px;
  font-weight: 600;
}

.github-search-input {
  width: 350px;
  height: 60px;
  padding-left: 15px;
  border: 0;
}

section#github-search {
  padding-top: 80px;
  padding-bottom: 80px;
}

section#github-search-results:after {
  content: "";
  flex: none;
  width: 30%;
}

.user-card {
  padding: 45px;
  background-color: #3d404a;
  width: 30%;
  margin-bottom: 5%;
}

section#github-search-results {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

a.user-card {
  color: #fff;
  text-decoration: none;
}
.user-title {
  margin-top: 20px;
}

.btn-outline-success {
  color: #a1c95e;
  background-color: transparent;
  background-image: none;
  border-color: #a1c95e;
}

.user-card:hover .view-profile-btn,
.btn-outline-success:hover {
  color: #fff;
  background-color: #a1c95e;
  border-color: #a1c95e;
}

.view-profile-btn {
  margin-top: 15px;
}

/*****PROFILE PAGE******/

.profile-wrapper {
  min-height: 100vh;
  background-color: #232733;
  color: #fff;
}

.no-padding-left-right {
  padding-left: 0;
  padding-right: 0;
}

.profile-header-outer-wrapper {
  padding-top: 80px;
}

.profile-header-img-wrapper,
.profile-header-text {
  padding-left: 0;
  padding-right: 0;
}

.profile-header-text {
  background-color: #353b4d;
  color: #fff;
  padding: 35px;
  display: flex;
  align-items: flex-start;
  justify-content: center;
  flex-direction: column;
  position: relative;
}

.loading-spinner {
  position: absolute;
  top: 15px;
  right: 15px;
}

.profile-header-text h1 {
  margin-bottom: -7px;
  font-size: 50px;
}

.profile-header-row {
  border-bottom: 7px solid #5cffe2;
}

.row-padded {
  padding-left: 15px;
  padding-right: 15px;
}

.description {
  font-size: 22px;
  padding-top: 15px;
}

.filter-controls {
  margin-top: 30px;
  margin-bottom: 30px;
  display: flex;
  justify-content: space-between;
}

.filter-controls button {
  width: 24%;
}

.filter-btn {
  background-color: #353b4c;
  border: 1px solid #4e5770;
  border-radius: 0;
  font-size: 16px;
  padding-top: 10px;
  padding-bottom: 10px;
}

.filter-btn.selected,
.filter-btn:hover {
  border: 1px solid #5cffe2;
  background-color: #353b4c;
}

.filter-btn svg {
  margin-right: 5px;
}

.repos-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.repos-wrapper:after {
  content: "";
  flex: none;
  width: calc(33.33% - 15px);
}

.single-repo-wrapper {
  background-color: #3d404a;
  width: calc(33.33% - 15px);
  margin-bottom: 50px;
  padding: 30px;
  text-align: left;
  display: flex;
  flex-direction: column;
  position: relative;
}

.repo-title {
  font-size: 26px;
  font-weight: 400;
  border-bottom: 1px solid rgba(255, 255, 255, 0.6);
  padding-bottom: 20px;
  margin-bottom: 30px;
  position: relative;
}

.repo-description {
  word-break: break-word;
}

hr.small-divider {
  border-color: #fff;
  width: 20%;
  display: inline-block;
  opacity: 0.1;
}

.view-repo-btn-wrapper {
  margin-top: auto;
}

.view-repo-btn {
  border: 1px solid #5cffe2;
  border-radius: 0;
  color: #5cffe2;
  padding-right: 25px;
  padding-left: 25px;
  width: 100%;
}

.view-repo-btn:hover,
.view-repo-btn:active {
  border-color: #25b99e;
  background-color: #25b99e;
  color: #fff;
}

.language {
  padding-bottom: 15px;
}

.date-created {
  position: absolute;
  bottom: -23px;
  left: 0;
  font-weight: 300;
  font-size: 12px;
  opacity: 0.4;
  letter-spacing: 0.25px;
}

.tag {
  text-transform: uppercase;
  font-size: 12px;
  display: inline-block;
  background-color: #5cffe2;
  color: #222222;
  padding: 2px 10px;
  margin: 5px 5px 5px 0px;
  border-radius: 25px;
  font-weight: 600;
}

span.stars-wrapper {
  font-size: 13px;
}

.site-wrapper a,
.site-wrapper a:hover,
.site-wrapper a:focus {
  color: #fff;
}

[type="reset"],
[type="submit"],
button,
html [type="button"] {
  -webkit-appearance: unset;
}

.filter-btn:focus {
  box-shadow: none;
}

.toggle-wrapper {
  display: flex;
  justify-content: space-between;
  border-bottom: 1px solid #ffffff;
  align-items: center;
  margin-bottom: 30px;
  cursor: pointer;
}

.tagCollapse,
.languageCollapse {
  display: block;
  width: 100%;
}

.info-wrapper {
  background-color: #3d404a;
  color: #ffffff;
  padding: 60px 80px;
  margin-top: 30px;
  margin-bottom: 60px;
}

.info-block h2 {
  font-size: 20px;
  margin-right: 20px;
}

.info-block p {
  font-size: 20px;
  font-weight: 300;
}

.email-link,
.email-link:hover,
.email-link:focus,
.email-link:visited {
  color: #fff;
  text-decoration: underline;
  text-underline-position: under;
}

.toggle-wrapper h3 {
  display: flex;
  align-items: center;
}

.numItems {
  background-color: #5cffe2;
  color: #222222;
  border-radius: 50%;
  width: 25px;
  height: 25px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  font-weight: 600;
  font-size: 14px;
  letter-spacing: initial;
  margin-left: 10px;
}

.search-btn {
  border-radius: 0;
  background-color: #a0c95d;
  color: #222;
}

#home-search {
  margin-top: 60px;
}

.visit-profile,
.visit-profile:hover,
.visit-profile:focus,
.visit-profile:visited {
  margin-top: 40px;
  border-bottom: 1px solid #fff;
  padding-bottom: 2px;
  color: #fff;
  text-decoration: none;
  display: inline-block;
}

.forked {
  position: absolute;
  bottom: 0px;
  left: 0;
  transform: translateY(45%);
  background-color: #3d4049;
  padding-right: 10px;
  font-size: 14px;
  text-align: center;
  color: rgba(255, 255, 255, 0.8);
}

@media only screen and (max-width: 1200px) {
  .single-repo-wrapper {
    width: calc(50% - 15px);
  }
}

@media only screen and (max-width: 992px) {
  .filter-controls {
    flex-wrap: wrap;
  }

  .filter-controls button {
    width: 48%;
    margin-bottom: 15px;
  }
}

@media only screen and (max-width: 767px) {
  .toggle-wrapper h3 {
    font-size: 24px;
  }

  .profile-header-outer-wrapper {
    padding-top: 30px;
  }

  .single-repo-wrapper {
    width: 100%;
  }

  .filter-controls button {
    width: 100%;
    margin-bottom: 5px;
  }

  .profile-header-text {
    padding: 25px 25px 20px 25px;
  }

  .profile-header-text h1 {
    margin-bottom: 10px;
    font-size: 28px;
    line-height: 1;
  }

  .profile-header-text h2 {
    font-size: 24px;
  }

  .description {
    font-size: 18px;
  }

  .info-wrapper {
    padding: 30px;
    margin-top: 0px;
  }
}

